fix body size so that background doesn't cause scroll on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
     line-height: 1.6;
     background-color: var(--primary-color);
-    min-height: 100vh;
+    max-height: 90vh;
     display: flex;
     justify-content: center;
     align-items: center;
